@@ -65,7 +65,7 @@ import se.llbit.ui.Adjuster;
 @SuppressWarnings("serial")
 public class ChunkyLauncher extends JFrame {
 
-	private static final String LAUNCHER_VERSION = "v1.7.1";
+	private static final String LAUNCHER_VERSION = "v1.7.2";
 
 	public class UpdateThread extends Thread {
 		@Override public void run() {
