@@ -1,4 +1,6 @@
 1.2.2 - TBD
+    * Fixed error causing the launcher to crash when running in headless mode
+      if the launcher GUI had not previously been run
     * The launcher (v1.7.0) now ignores older releases if a newer version
       already is installed
     * Using -render without a scene name argument prints out available scenes
